--- a/Src/makefile
+++ b/Src/makefile
@@ -10,10 +10,10 @@ app.exe : main.o LCD.o DIO.o Nasser_MinaMedhat_Yakkob_Rafat.o
 
 
 main.o : main.c
-	$(CC) -c $< -o $@
+	$(CC) -c -I$(include_path) $< -o $@
 
 LCD.o : LCD.c
-	$(CC) -c $< -o $@
+	$(CC) -c -I$(include_path) $< -o $@
 
 DIO.o : DIO.c
-	$(CC) -c $< -o $@
+	$(CC) -c -I$(include_path) $< -o $@
