--- a/Src/makefile
+++ b/Src/makefile
@@ -1,5 +1,5 @@
 
-vpath %.c D:\embedded systems\Sprints\Makefile Session\challenge\Makefile\Src
+vpath %.c ./Src
 include_path = D:\embedded systems\Sprints\Makefile Session\challenge\Makefile\Inc
 CC = gcc
 
